objects/ssot__IdentityMatch__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Identity Match Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IdentityMatchType__c</fullName>
        <label>Identity Match Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IdentityMatchWeight__c</fullName>
        <label>Identity Match Weight</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAMatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is a Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MatchingObject__c</fullName>
        <label>Matching Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MatchingRecordId__c</fullName>
        <label>Matching Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecordId__c</fullName>
        <label>Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1721372199690_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IdentityMatch_MatchingRecordId_map_I_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>IdentityMatch_MatchingRecordId_map_I_rel</relationshipLabel>
        <relationshipName>rel_1721372199690_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1721372228955_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IdentityMatch_RecordId_map_Individua_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>IdentityMatch_RecordId_map_Individua_rel</relationshipLabel>
        <relationshipName>rel_1721372228955_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>